--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.12.22",
+    "fs": "^0.0.1-security",
     "mdb-react-ui-kit": "^6.1.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
